--- a/sfml_graph/sfml_graph.vcxproj.filters
+++ b/sfml_graph/sfml_graph.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="GraphMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GraphEdgeEntity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphNode.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GraphTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphEdgeEntity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
