--- a/sfml_graph/sfml_graph.vcxproj
+++ b/sfml_graph/sfml_graph.vcxproj
@@ -155,12 +155,14 @@
     <ClCompile Include="GraphMap.cpp" />
     <ClCompile Include="GraphNode.cpp" />
     <ClCompile Include="sfml_graph.cpp" />
+    <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphEdge.h" />
     <ClInclude Include="GraphMap.h" />
     <ClInclude Include="GraphNode.h" />
     <ClInclude Include="GraphTypes.h" />
+    <ClInclude Include="TileMap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
