tile cell vector

--- a/sfml_graph/sfml_graph.vcxproj
+++ b/sfml_graph/sfml_graph.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="GraphMap.cpp" />
     <ClCompile Include="GraphNode.cpp" />
     <ClCompile Include="sfml_graph.cpp" />
+    <ClCompile Include="TileCell.cpp" />
     <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -162,6 +163,7 @@
     <ClInclude Include="GraphMap.h" />
     <ClInclude Include="GraphNode.h" />
     <ClInclude Include="GraphTypes.h" />
+    <ClInclude Include="TileCell.h" />
     <ClInclude Include="TileMap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
