--- a/sfml_graph/sfml_graph.vcxproj.filters
+++ b/sfml_graph/sfml_graph.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="TileMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TileCell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphNode.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TileMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TileCell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
