--- a/sfml_graph/sfml_graph.vcxproj
+++ b/sfml_graph/sfml_graph.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameInstance.cpp" />
     <ClCompile Include="GraphEdge.cpp" />
     <ClCompile Include="GraphEdgeEntity.cpp" />
     <ClCompile Include="GraphMap.cpp" />
@@ -160,6 +161,7 @@
     <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameInstance.h" />
     <ClInclude Include="GraphEdge.h" />
     <ClInclude Include="GraphEdgeEntity.h" />
     <ClInclude Include="GraphMap.h" />
