--- a/sfml_graph/sfml_graph.vcxproj
+++ b/sfml_graph/sfml_graph.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="GraphEdgeEntity.cpp" />
     <ClCompile Include="GraphMap.cpp" />
     <ClCompile Include="GraphNode.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="sfml_graph.cpp" />
     <ClCompile Include="TileCell.cpp" />
     <ClCompile Include="TileMap.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="GraphMap.h" />
     <ClInclude Include="GraphNode.h" />
     <ClInclude Include="GraphTypes.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="TileCell.h" />
     <ClInclude Include="TileMap.h" />
   </ItemGroup>
